# OpenCvKotlinPlayground

./: .gitignore  README.md  build.gradle  dependencies.gradle  gradle.properties  import-summary.txt  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/pl/olszak/michal/opencvplayground/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DetectionBasedTracker.cpp  DetectionBasedTracker.h  EdgeDetector.cpp  EdgeDetector.h
app/src/main/java/pl/olszak/michal/opencvplayground/: DetectionBasedTracker.kt  MainActivity.kt  OpenCvPlayground.kt
app/src/main/java/pl/olszak/michal/opencvplayground/concurrent/: ScannerSchedulersFacade.kt  SchedulersFacade.kt
app/src/main/java/pl/olszak/michal/opencvplayground/detector/: EdgeDetector.kt
app/src/main/java/pl/olszak/michal/opencvplayground/di/: ApplicationComponent.kt
app/src/main/java/pl/olszak/michal/opencvplayground/di/module/: ActivityBindingModule.kt  ApplicationModule.kt  ScannerActivityModule.kt
app/src/main/java/pl/olszak/michal/opencvplayground/domain/: Presenter.kt
app/src/main/java/pl/olszak/michal/opencvplayground/scanner/: ScannerActivity.kt
app/src/main/java/pl/olszak/michal/opencvplayground/util/: PermissionManager.kt
app/src/main/res/layout/: activity_main.xml  activity_scanner.xml  merge_scanner_view.xml
app/src/main/res/raw/: lbpcascade_frontalface.xml
app/src/main/res/values/: strings.xml
app/src/test/java/pl/olszak/michal/opencvplayground/: ExampleUnitTest.kt
core/: .gitignore  build.gradle
(+17 files in other folders)
